--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fitnessgym",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://fitnessgym.dawidolko.pl/FitnessGym",
+  "homepage": "https://fitnessgym.dawidolko.pl",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
